--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"
+    />
     <title>Number Guesser App</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>Number Guesser</h1>
-        <div id="game">
-            <p>guess a number between<span class="min-num">1</span><span>and</span><span class="max-num">10</span></p>
-            <input type="number" id="guess-input" placeholder="Enter Your Guess...">
-            <input type="submit" value="Submit" id="guess-value" />
-            <p class="message"></p>
-        </div>
+      <h1>Number Guesser</h1>
+      <div id="game">
+        <p>
+          guess a number between<span class="min-num">1</span><span>and</span
+          ><span class="max-num">10</span>
+        </p>
+        <input
+          type="number"
+          id="guess-input"
+          placeholder="Enter Your Guess..."
+        />
+        <input type="submit" value="Submit" id="guess-value" />
+        <p class="message"></p>
+      </div>
     </div>
     <script src="./script/index.js"></script>
-</body>
+  </body>
 </html>
